--- a/example-flask-python3.6-index/app/static/index.html
+++ b/example-flask-python3.6-index/app/static/index.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Index</title>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Title</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  
 </head>
+
 <body>
-<h1>Hello World from HTML (from the example template)</h1>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+  
+  <div class="flex-container">
+	<header>
+		<div class="header-center" >
+	   		<h2>Header</h2>
+	   	</div>
+	   	</div>
+	</header>
+	
+	<nav>
+		<p>Nav</p>
+	</nav>
+	
+	</br>
+	
+	<section class="flex-row">
+		<p class="lazy"> Use lazy class to load images </p>
+	</section>
+	
+	</br>
+	
+	<section class="flex-row">
+		<p class="lazy"> Use lazy class to load images </p>
+	</section>
+	
+	</br>
+	
+   <footer>Copyright &copy; Copyright Holder</footer>
+   
+ </div>
+   
+  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="js/vendor/jquery-3.3.1.min.js"></script>
+  <script src="js/vendor/jquery.lazy.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
 </body>
+
 </html>
