added python generated chart

--- a/example-flask-python3.6-index/app/static/index.html
+++ b/example-flask-python3.6-index/app/static/index.html
@@ -37,13 +37,14 @@
 	</br>
 	
 	<section class="flex-row">
-		<p class="lazy"> Use lazy class to load images </p>
+		<p> A Chart loaded as needed...</p>
+		<img class="lazy" src="./sample_chart.png" />
 	</section>
 	
 	</br>
 	
 	<section class="flex-row">
-		<p class="lazy"> Use lazy class to load images </p>
+		<p> Section </p>
 	</section>
 	
 	</br>
