--- a/app/static/index.html
+++ b/app/static/index.html
@@ -22,29 +22,30 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   
-  <div class="flex-container">
-	<header>
-		<div class="header-center" >
-	   		<h2>Header</h2>
-	   	</div>
-	   	</div>
-	</header>
-	
+  <div class="flex-container header">
+    <header>
+      <div class="header-center" >
+          <h2>Python Web Application</h2>
+        </div>  	
+    </header>
+  </div>
+
+
 	<nav>
-		<p>Nav</p>
+		Nav
 	</nav>
 	
 	</br>
 	
 	<section class="flex-row">
-		<p> A Chart loaded as needed...</p>
+    Section 1
 		<img class="lazy" src="./sample_chart.png" />
 	</section>
 	
 	</br>
 	
 	<section class="flex-row">
-		<p> Section </p>
+		Section 2
 	</section>
 	
 	</br>
