--- a/app/static/index.html
+++ b/app/static/index.html
@@ -19,40 +19,76 @@
 
 
 </head>
-
 <body>
+	
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
+	
   <div class="main-container">
-      
-    <div class="alert alert-app-level">
-          ...
-      </div>
+  	<div class="alert alert-app-level">
+		...
+  	</div>
   
-  <div class="header header-6">
-          Python Web Application
-  </div>
-
+	<div class="header header-6">
+		Python Web Application
+	</div>
 
 	<nav class="subnav">
-		Nav
+		<ul class="nav">
+      			<li class="nav-item">
+          			<a class="nav-link active" href="#">Dashboard</a>
+      			</li>
+      			<li class="nav-item">
+          			<a class="nav-link" href="#">Management</a>
+      			</li>
+      			<li class="nav-item">
+          			<a class="nav-link" href="#">Cloud</a>
+      			</li>
+      			<li class="nav-item">
+          			<a class="nav-link" href="#">Tenants</a>
+      			</li>
+  		</ul>
 	</nav>
 	
 	
-  <div class="content-container">
-      <div class="content-area">
-          Section 1
-		      <img class="lazy" src="./sample_chart.png" />
-      </div>
-      <div class="content-area">
-          Section 2
-      </div>
-      <nav class="sidenav">
-          ...
-      </nav>
-  </div>
-   
+  	<div class="content-container">
+      		<div class="content-area">
+         		Section 1
+		      	<img class="lazy" src="./sample_chart.png" />
+      		</div>
+
+      		<nav class="sidenav">
+          		<section class="sidenav-content">
+          			<a href="..." class="nav-link active">
+              				Nav Element 1
+          			</a>
+          			<a href="..." class="nav-link">
+              				Nav Element 2
+          			</a>
+          			<section class="nav-group collapsible">
+              				<input id="tabexample1" type="checkbox">
+              				<label for="tabexample1">Collapsible Nav Element</label>
+              				<ul class="nav-list">
+                  				<li><a class="nav-link">Link 1</a></li>
+                  				<li><a class="nav-link">Link 2</a></li>
+              				</ul>
+          			</section>
+          			<section class="nav-group">
+              				<input id="tabexample2" type="checkbox">
+              				<label for="tabexample2">Default Nav Element</label>
+              				<ul class="nav-list">
+						<li><a class="nav-link">Link 1</a></li>
+						<li><a class="nav-link">Link 2</a></li>
+						<li><a class="nav-link active">Link 3</a></li>
+						<li><a class="nav-link">Link 4</a></li>
+						<li><a class="nav-link">Link 5</a></li>
+						<li><a class="nav-link">Link 6</a></li>
+              				</ul>
+          			</section>
+      			</section>
+      		</nav>
+  	</div>
  </div>
    
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
